2008-07-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DesignerActionMethodItem.cs: Fix typo where the action_list
	field was self-assigned (instead of taking the ctor value).
	[Found using Gendarme ReviewSelfAssignmentRule]

2008-06-28  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignSurfaceManager.cs: Set the ActiveSurface only if it 
	differs from the current one.

2008-06-28  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignerHost.cs: Surpress remove events when unloading.

2008-06-18  Ivan N. Zlatev  <contact@i-nz.net>

	* ExtenderService.cs: Do not throw a NRE.

2008-06-18  Ivan N. Zlatev  <contact@i-nz.net>

	* SelectionService.cs: Handle removal of the root component 
	properly.

2008-04-18  Ivan N. Zlatev  <contact@i-nz.net>

	* CollectionEditor.cs: Select the next item after the one 
	removed, not the one before.
	[Fixes bug #375788]

2008-04-03  Ivan N. Zlatev  <contact@i-nz.net>

	* CollectionEditor.cs: 
	  - Handle removing multiple items at once.
	  - Select the previous item after removal of other(s).

2008-04-03  Ivan N. Zlatev  <contact@i-nz.net>

	* CollectionEditor.cs: The display name of an object in the 
	list is not static. It can dynamically change when the object 
	get's modified.
	[Fixes bug #375786]

2008-03-28  Ivan N. Zlatev  <contact@i-nz.net>

	* CollectionEditor.cs: Fix multiple bugs.

2008-03-19  Ivan N. Zlatev  <contact@i-nz.net>

	* MultilineStringEditor.cs: Handle null value by forcing an 
	empty string to be edited.
	[Fixes bug #372264]

2008-03-10  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignModeSite.cs: Do not return the site specific service 
	container if GetService is asked for IServiceContainer.

2008-03-02  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignModeSite.cs: Fix Name setter to actually set the name.

2008-03-01  Ivan N. Zlatev  <contact@i-nz.net>

	* MenuCommandService.cs: implemeneted
	* DesignerHost.cs: Do not fire ComponentChanging/ed events
	when removing a component.
	* DesignModeSite: Naming fixes.